# gpuvmem

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.prod  README.md  _config.yml  cuda_check.cmake  environment.yml  environment_cudatoolkit.yml  requirements.txt
.github/workflows/: build_base_container.yml  build_latest_container.yml  build_tagged_container.yml  workflow.yml
cmake/: FindCCfits.cmake  FindCFITSIO.cmake  FindCasacore.cmake
docs/: fits_io_refactor.md  ms_dataset_migration_ref.md
include/: MSFITSIO.cuh  brent.cuh  briggsweightingscheme.cuh  chi2.cuh  ckernels.cuh  complexOps.cuh  conjugategradient.cuh  directioncosines.cuh  drvrsmem.h  ellipticGaussian2D.cuh  ellipticalGaussian2D.cuh  entropy.cuh  factory.cuh  fixedpoint.cuh  framework.cuh  frprmn.cuh  functions.cuh  gaussian2D.cuh  gaussianSinc2D.cuh  gentropy.cuh  gl1norm.cuh  gridder.cuh  gridding.cuh  imageProcessor.cuh  iofits.cuh  ioms.cuh  l1norm.cuh  laplacian.cuh  lbfgs.cuh  linesearcher.cuh  linmin.cuh  longnam.h  mfs.cuh  mnbrak.cuh  naturalweightingscheme.cuh  nrutil.h  pillBox2D.cuh  pswf_02D.cuh  pswf_12D.cuh  quadraticpenalization.cuh  (+8 more)
include/classes/: ckernel.cuh  error.cuh  fi.cuh  filter.cuh  flags.cuh  image.cuh  io.cuh  objectivefunction.cuh  optimizator.cuh  optimizer.cuh  secondderivateerror.cuh  synthesizer.cuh  uvtaper.cuh  virtualimageprocessor.cuh  visibilities.cuh  weightingscheme.cuh
include/fits/: fits_io.h
include/linesearch/: backtracking_armijo.cuh  brent.cuh  fibonacci_search.cuh  fista_backtracking.cuh  fixed.cuh  gll_armijo.cuh  golden_section_search.cuh  linesearch_utils.cuh
include/ms/: baseline.h  beam_noise.h  data_column.h  field.h  gpu_buffers.h  gridded_visibilities.h  measurement_set.h  measurement_set_metadata.h  metadata.h  ms_reader.h  ms_with_gpu.h  ms_writer.h  polarization.h  primary_beam.h  time_sample.h  visibility_model.h
include/objective_function/terms/chi2/: chi2.cuh
include/objective_function/terms/regularizers/: gl1norm.cuh  l1norm.cuh  l2constantprior.cuh  laplacian.cuh  quadraticpenalization.cuh  secondderivateerror.cuh  totalsquaredvariation.cuh  totalvariation.cuh
include/optimizers/: conjugategradient.cuh
include/seeding/: bb_alternating_seeder.cuh  bb_min1_seeder.cuh  bb_min2_seeder.cuh  cubic_interpolation_seeder.cuh  quadratic_interpolation_seeder.cuh
scripts/: check_cuda.cu  restore.py  restore_continuum_ms_SC.py
src/: MSFITSIO.cu  brent.cu  briggsweightingscheme.cu  chi2.cu  ckernels.cu  complexOps.cu  copyrightwarranty.cu  directioncosines.cu  ellipticGaussian2D.cu  ellipticalGaussian2D.cu  entropy.cu  f1dim.cu  fixedpoint.cu  frprmn.cu  functions.cu  gaussian2D.cu  gaussianSinc2D.cu  gentropy.cu  gl1norm.cu  gridder.cu  gridding.cu  imageProcessor.cu  iofits.cu  ioms.cu  l1norm.cu  l2constantprior.cu  laplacian.cu  lbfgs.cu  linesearcher.cu  linmin.cu  main.cu  mfs.cu  mnbrak.cu  naturalweightingscheme.cu  pillBox2D.cu  pswf_02D.cu  pswf_12D.cu  quadraticpenalization.cu  radialweightingscheme.cu  rngs.cu  (+7 more)
src/fits/: fits_io.cu
src/linesearch/: backtracking_armijo.cu  brent.cu  fibonacci_search.cu  fista_backtracking.cu  fixed.cu  gll_armijo.cu  golden_section_search.cu  linesearch_utils.cu
src/ms/: beam_noise.cu  gpu_buffers.cu  ms_reader.cu  ms_writer.cu  polarization.cu  primary_beam.cu  visibility_model.cu
src/objective_function/terms/chi2/: chi2.cu
src/objective_function/terms/regularizers/: entropy.cu  gentropy.cu  gl1norm.cu  l1norm.cu  l2constantprior.cu  laplacian.cu  quadraticpenalization.cu  secondderivateerror.cu  totalsquaredvariation.cu  totalvariation.cu
src/optimizers/: conjugategradient.cu  dai_yuan.cu  fletcher_reeves.cu  hager_zhang.cu  hestenes_stiefel.cu  lbfgs.cu  liu_storey.cu  polak_ribiere.cu  rmil.cu
src/seeding/: bb_alternating_seeder.cu  bb_min1_seeder.cu  bb_min2_seeder.cu  cubic_interpolation_seeder.cu  quadratic_interpolation_seeder.cu
tests/FREQ78/: mod_in_0.fits  test.sh
tests/FREQ78/FREQ78.ms/ANTENNA/: table.f0
tests/M87/: M87_original_highfreq.fits  M87_original_lowfreq.fits  alpha.fits  error_Inu_0.fits  error_alpha.fits  mod_in_0.fits  test.sh
tests/M87/SR1_M87_2017_101_hi_hops_netcal_StokesI.selfcal.LLRR.ms/ANTENNA/: table.f0
tests/M87/SR1_M87_2017_101_hi_hops_netcal_StokesI.selfcal.LLRR.ms/OBSERVATION/: table.info
tests/M87/SR1_M87_2017_101_hilo_hops_netcal_StokesI.selfcal.final.ms/SOURCE/FT_MODEL23735_30/: table.info
tests/M87/testing/: mod_out.fits
tests/M87/testing/residuals.ms/: table.f17_TSM1  table.f6  table.f6i
tests/antennae/: mod_in_0.fits  test.sh
tests/antennae/all_fields.ms/: table.f1  table.f1i
tests/antennae/all_fields.ms/ANTENNA/: table.f0
tests/co65/: alpha.fits  fft.fits  gridfft_afterdividing.fits  gridfft_beforedividing.fits  mod_in_0.fits  mod_out.fits  test.sh  weights_grid_afterdividing.fits  weights_grid_aux_beforedividing.fits  weights_grid_beforedividing.fits
tests/co65/residuals.ms/: table.f1  table.f1i  table.f2_TSM1
tests/co65/residuals.ms/ANTENNA/: table.f0
tests/selfcalband9/: alpha.fits  error_Inu_0.fits  error_alpha.fits  mod_in_0.fits  mod_out.fits  test.sh
tests/selfcalband9/hd142_b9cont_self_tav.ms/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/ANTENNA/: table.f0
tests/selfcalband9/hd142_b9cont_self_tav.ms/ANTENNA/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/DATA_DESCRIPTION/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/FEED/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/FIELD/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/FLAG_CMD/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/HISTORY/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/OBSERVATION/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/POINTING/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/POLARIZATION/.svn/: entries
tests/selfcalband9/hd142_b9cont_self_tav.ms/PROCESSOR/.svn/: entries
tests/selfcalband9/residuals.ms/: table.f1  table.f1i  table.f2_TSM1
(+3 files in other folders)
